tests/should_succeed/sizeof.jou
import "stdlib/io.jou"

def main() -> int:
    printf("%lld\n", sizeof("hello"))
    return 0
