tests/syntax_error/ternary.jou
def main() -> int:
    printf("hello" if True)  # Error: expected 'else', got ')'
